--- a/chaoliu/chaoliu/chaoliu.vcxproj
+++ b/chaoliu/chaoliu/chaoliu.vcxproj
@@ -11,7 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
+    <ClCompile Include="chaoliujisuan.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{82F0E794-D20B-4315-8C8F-21F68CDC03A3}</ProjectGuid>
